--- a/main.bib
+++ b/main.bib
@@ -21,3 +21,14 @@
     url = {https://github.com/shadypuck/CHEM20100Notes/blob/master/Notes/notes.pdf},
     version = {Accessed 29 March 2021}
 }
+
+@article{bib:trigonalBiprysmatic,
+author = {Valerie Pfennig and Konrad Seppelt},
+title = {Crystal and Molecular Structures of Hexamethyltungsten and Hexamethylrhenium},
+journal = {Science},
+volume = {271},
+number = {5249},
+pages = {626-628},
+year = {1996},
+doi = {10.1126/science.271.5249.626}
+}
