Spessard and Miessler: Chapters 1-2

--- a/Notes/Unit1/Unit1.tex
+++ b/Notes/Unit1/Unit1.tex
@@ -210,6 +210,43 @@
 
 
 
+\section{Chapter 1: An Overview of Organometallic Chemistry}
+\emph{From \textcite{bib:SpessardMiessler}.}
+\begin{itemize}
+    \item \marginnote{4/1:}\textbf{Cluster compound}: A compound containing two or more metal-metal bonds.
+    \item \textbf{Sandwich compound}: A compound with a metal sandwiched between two ligand rings with cyclic delocalized $\pi$ systems.
+    \item \ce{CO} is the most common of all ligands in organometallic chemistry.
+    \item \textbf{Carbide cluster}: A metal cluster encapsulating a carbon atom.
+    \item "Strictly speaking, the only compounds classified as organometallic are those that contain metal-carbon bonds, but in practice, complexes containing several other ligands similar to \ce{CO} in their bonding, such as \ce{NO} and \ce{N2}, are frequently included" \parencite[4]{bib:SpessardMiessler}.
+    \begin{figure}[h!]
+        \centering
+        \chemfig{Cl-[,1.4]Pt(>:[1]Cl)(<[5]Cl)-[,1.4]\phantom{i}-[:-80,0.37,,,white]C(<[:-80]H)(>:[7]H)=[2]C(<[:80]H)(>:[1]H)}
+        \caption{$\pi$ bonding in Zeise's salt.}
+        \label{fig:ZeisesSalt}
+    \end{figure}
+    \item In the anionic component of Zeise's salt, the $\pi$ electrons of ethene bond to a \ce{PtCl3-} fragment (see Figure \ref{fig:ZeisesSalt}).
+    \item Complexes with chiral ligands can "catalyze the selective formation of specific enantiomers of chiral molecules. In some cases, the enantioselectivity of these reactions has even equaled that of enzymatic systems" \parencite[7]{bib:SpessardMiessler}.
+\end{itemize}
+
+
+
+\section{Chapter 2: Fundamentals of Structure and Bonding}
+\emph{From \textcite{bib:SpessardMiessler}.}
+\begin{itemize}
+    \item Review of the Schr\"{o}dinger wave equation atomic orbitals, and molecular orbitals.
+    \begin{itemize}
+        \item \emph{Shell} and \emph{subshell} are older terminology.
+        \item "In a bonding interaction, electrons are concentrated between the nuclei and tend to hold the nuclei together; in an antibonding interaction, electrons avoid the region of space between  the nuclei and therefore expose the nuclei to each other's positive charges, tending to cause the nuclei to repel each other" \parencite[18]{bib:SpessardMiessler}.
+    \end{itemize}
+    \item Discusses a bit of computational chemistry in the abstract.
+    \begin{itemize}
+        \item Some of this stuff relates to what I talked about with Dr. V\'{a}zquez-Mayagoitia; I should reread this before I email him.
+    \end{itemize}
+    \item There may be some stuff here that CHEM 20100 didn't cover, but I'll only come back if necessary.
+\end{itemize}
+
+
+
 \section[Lecture 2: Electron Counting, \texorpdfstring{$18\,\text{e}^-$}{TEXT} Rule]{Lecture 2: Electron Counting, \texorpdfstring{$\bm{18\,\textbf{e}^-}$}{TEXT} Rule}
 \begin{itemize}
     \item \marginnote{3/31:}Organometallic chemistry: Strictly speaking, compounds containing metal-carbon bonds. More broadly, it's homogeneous transition metal chemistry ([frequently diamagnetic] metals bonded to light atoms).
@@ -238,7 +275,7 @@
     \item Common structures:
     \begin{itemize}
         \item 4 coordinate:
-        \begin{figure}[h!]
+        \begin{figure}[H]
             \centering
             \begin{subfigure}[b]{0.3\linewidth}
                 \centering
@@ -322,7 +359,7 @@
         \end{figure}
         \begin{itemize}
             \item Trigonal bipyramidal (the axial ligands push $d_{z^2}$ high in energy, $d_{xy,x^2-y^2}$ are degenerate by the threefold $D_{3h}$ symmetry, and $d_{xz,yz}$ are nonbonding and thus lowest in energy; note also that this geometry has \textbf{fluxional ligands}).
-            \begin{figure}[H]
+            \begin{figure}[h!]
                 \centering
                 \begin{subfigure}[b]{0.3\linewidth}
                     \centering
